# tls13c

./: .gitignore  Cargo.toml  README.md
book/: Makefile  aes_gcm.md  authenticated_ciphers.md  chacha20.md  handshake.html  handshake.md  hash-and-mac.md  hsmd.yaml  mail-archive-link.md  nom-unifrom-distribution.md  part-01.md  part-03.md  part-0X.md  py-venv-pycrptodome.sh  style.css  unifrom-distribution.md
notes/: bookmarks-01-tlls13.txt  bookmarks-02-dh.txt  bookmarks-03-aead.txt  bookmarks-04-rlwe.txt  bookmarks-05-dlog.txt  bookmarks-06-ml-kem.txt  mkcert.sh  ossl_local_serv.sh  ossl_rsa_cert_local_serv.sh  process_ciphertext_records.txt
server/: dicp-cert.pem  dicp-key.pem  dicp-public-key.pem  dicp-rsa-cert.pem  dicp-rsa-key.pem  dicp.html  index.html  mac_run_s_server.sh  ossl_rsa_cert_local_serv.sh
src/: ccs.rs  cert.rs  cfg.rs  ch.rs  cipher.rs  client.rs  crypto.rs  def.rs  deser.rs  ecdhe.rs  enc_ext.rs  err.rs  ext.rs  fin.rs  key_sched.rs  logger.rs  main.rs  protocol.rs  rand.rs  rec.rs  session.rs  sh.rs  sock.rs  stream.rs  view.rs
