[package]
name = "tlsc"
authors = ["dp@w3pleb.org"]
version = "0.1.2"
edition = "2021"

[dependencies]
aead = "0.5.2"
aes-gcm = { version = "^0.10" }
chacha20poly1305 = { version = "0.10.1" }
env_logger = { version = "^0.11" }
hkdf = { version = "0.12.4" }
hmac = { version = "0.12.1" }
log = { version = "0.4.22" }
p256 = { version = "0.13.2", features = ["ecdh"] }
rand_core = { version = "^0.6.4", features = ["getrandom"] }
rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = { version = "0.10.8" }
x25519-dalek = { version = "^2.0", features = ["getrandom"] }
x509-cert = { version = "0.2.5" }


[profile.dev.package.num-bigint-dig]
opt-level = 3
